--- a/tibia-optimizer-frontend/package.json
+++ b/tibia-optimizer-frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "strip:comments": "node ./scripts/removeComments.mjs"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -27,8 +28,11 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "fast-glob": "^3.3.3",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "strip-comments": "^2.0.1",
+    "strip-css-comments": "^5.0.0",
     "vite": "^6.3.5"
   }
 }
