--- a/tibia-optimizer-frontend/package.json
+++ b/tibia-optimizer-frontend/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "strip:comments": "node ./scripts/removeComments.mjs"
+    "strip:comments": "node ./scripts/removeComments.mjs",
+    "format:repo": "node ./scripts/formatRepo.mjs",
+    "sanitize": "npm run strip:comments && npm run format:repo"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -31,6 +33,7 @@
     "fast-glob": "^3.3.3",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "prettier": "^3.6.2",
     "strip-comments": "^2.0.1",
     "strip-css-comments": "^5.0.0",
     "vite": "^6.3.5"
